--- a/Elysian World Lite/overrides/resourcepacks/Elysian World-Translate-1.19.2/assets/usefulrailroads/lang/zh_tw.json
+++ b/Elysian World Lite/overrides/resourcepacks/Elysian World-Translate-1.19.2/assets/usefulrailroads/lang/zh_tw.json
@@ -36,4 +36,4 @@
 "item.usefulrailroads.single_track_builder.tooltip.1":"%s 執行建立操作",
 "item.usefulrailroads.track_builder.not_enough_blocks":"沒有足夠的方塊。",
 "item.usefulrailroads.track_builder.not_enough_fuel":"燃料不足. 此動作消耗 %s 燃料。",
-"itemGroup.usefulrailroads.group":"實用的鐵路"}
+"itemGroup.usefulrailroads.group":"實用鐵路"}
