--- a/Elysian World Lite/overrides/resourcepacks/Elysian World-Translate-1.19.2/assets/torchmaster/lang/zh_tw.json
+++ b/Elysian World Lite/overrides/resourcepacks/Elysian World-Translate-1.19.2/assets/torchmaster/lang/zh_tw.json
@@ -1,5 +1,5 @@
 {
-    "block.torchmaster.megatorch": "超級火把",
+    "block.torchmaster.megatorch": "超級火把！",
     "block.torchmaster.megatorch.tooltip": "以火把為中心，大範圍防止敵對生物生成",
     "block.torchmaster.dreadlamp": "顫慄燈",
     "block.torchmaster.dreadlamp.tooltip": "以燈為中心，大範圍防止被動生物（如：魷魚、蝙蝠、山貓等）生成",
