--- a/Elysian World Lite/overrides/resourcepacks/Elysian World-Translate-1.19.2/assets/easy_villagers/lang/zh_tw.json
+++ b/Elysian World Lite/overrides/resourcepacks/Elysian World-Translate-1.19.2/assets/easy_villagers/lang/zh_tw.json
@@ -5,8 +5,8 @@
   "block.easy_villagers.auto_trader": "自動交易所",
   "block.easy_villagers.farmer": "生產所",
   "block.easy_villagers.breeder": "繁殖所",
-  "block.easy_villagers.converter": "轉化所",
-  "block.easy_villagers.iron_farm": "鐵魔像農場",
+  "block.easy_villagers.converter": "轉換所",
+  "block.easy_villagers.iron_farm": "鐵巨人農場",
   "block.easy_villagers.incubator": "成長所",
   "block.easy_villagers.inventory_viewer": "物品檢視器",
   "gui.easy_villagers.food_items": "特定食物",
@@ -21,14 +21,14 @@
   "itemGroup.easy_villagers": "Easy Villagers",
   "tooltip.easy_villagers.villager_profession": "%s (%s)",
   "tooltip.easy_villagers.zombie_villager_profession": "%s (%s)",
-  "tooltip.easy_villagers.cycle_trades": "交易刷新",
+  "tooltip.easy_villagers.cycle_trades": "交易更新",
   "jei.easy_villagers.breeding": "繁殖",
   "jei.easy_villagers.converting": "轉化",
   "jei.easy_villagers.incubating": "成長",
   "key.easy_villagers.pick_up": "拿取",
-  "key.easy_villagers.cycle_trades": "交易刷新",
+  "key.easy_villagers.cycle_trades": "交易更新",
   "category.easy_villagers": "Easy Villagers",
   "config.jade.plugin_easy_villagers.villager": "村民",
-  "config.jade.plugin_easy_villagers.converter": "轉化所",
+  "config.jade.plugin_easy_villagers.converter": "轉換所",
   "config.jade.plugin_easy_villagers.breeder": "繁殖所"
 }
