--- a/Elysian World Lite/overrides/resourcepacks/Elysian World-ZH_Translate-1.19.2/assets/mcwfences/lang/zh_tw.json
+++ b/Elysian World Lite/overrides/resourcepacks/Elysian World-ZH_Translate-1.19.2/assets/mcwfences/lang/zh_tw.json
@@ -1,5 +1,5 @@
 {
-    "itemGroup.mcwfences": "金剛鸚鵡的柵欄和牆",
+    "itemGroup.mcwfences": "馬可的柵欄和牆",
     "death.attack.wired_fence": "%1$s 試圖越過鐵絲柵欄",
     "death.attack.wired_fence.player": "%1$s 在試圖逃離 %2$s 時試圖越過鐵絲柵欄",
     "block.mcwfences.spruce_picket_fence": "杉木籬柵",
