--- a/Elysian World Lite/overrides/resourcepacks/Elysian World-ZH_Translate-1.19.2/assets/mcwdoors/lang/zh_tw.json
+++ b/Elysian World Lite/overrides/resourcepacks/Elysian World-ZH_Translate-1.19.2/assets/mcwdoors/lang/zh_tw.json
@@ -1,5 +1,5 @@
 {
-    "itemGroup.mcwdoors": "金剛鸚鵡的門",
+    "itemGroup.mcwdoors": "馬可的門",
     "mcwdoors.crafting.desc": "合成原料",
     "subtitle.mcwdoors.shoji": "打開障子門",
     "subtitle.mcwdoors.garage": "打開車庫門",
