--- a/Elysian World Lite/overrides/resourcepacks/Elysian World-ZH_Translate-1.19.2/assets/mcwwindows/lang/zh_tw.json
+++ b/Elysian World Lite/overrides/resourcepacks/Elysian World-ZH_Translate-1.19.2/assets/mcwwindows/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
-    "itemGroup.mcwwindows.windows_group": "金剛鸚鵡的窗戶",
-    "itemGroup.mcwwindows.blinds_group": "金剛鸚鵡的窗戶組件",
+    "itemGroup.mcwwindows.windows_group": "馬卡的窗戶",
+    "itemGroup.mcwwindows.blinds_group": "馬卡的窗戶組件",
     "item.mcwwindows.window_base": "基礎窗框",
     "item.mcwwindows.window_centre_bar_base": "窗欞",
     "item.mcwwindows.hammer": "破窗器",
