--- a/Elysian World Lite/overrides/resourcepacks/Elysian World-ZH_Translate-1.19.2/assets/workshop_for_handsome_adventurer/lang/zh_tw.json
+++ b/Elysian World Lite/overrides/resourcepacks/Elysian World-ZH_Translate-1.19.2/assets/workshop_for_handsome_adventurer/lang/zh_tw.json
@@ -3,8 +3,10 @@
 	"item.workshop_for_handsome_adventurer.workstation_placer_spruce": "工作站 (杉木)",
 	"item.workshop_for_handsome_adventurer.workstation_placer_birch": "工作站 (樺木)",
 	"item.workshop_for_handsome_adventurer.workstation_placer_jungle": "工作站 (叢林木)",
-	"item.workshop_for_handsome_adventurer.workstation_placer_dark_oak": "工作站 (深色橡木)",
+	"item.workshop_for_handsome_adventurer.workstation_placer_dark_oak": "工作站 (黑橡木)",
 	"item.workshop_for_handsome_adventurer.workstation_placer_mangrove": "工作站 (紅樹木)",
+	"item.workshop_for_handsome_adventurer.workstation_placer_crimson": "工作站 (緋紅蕈木)",
+	"item.workshop_for_handsome_adventurer.workstation_placer_warped": "工作站 (扭曲蕈木)",
 	"item.workshop_for_handsome_adventurer.workstation_placer.tooltip1": "合適的製作桌，有足夠空間製作多個物品。",
 	"item.workshop_for_handsome_adventurer.workstation_placer.tooltip2": "可存取附近的儲物裝置，可放置物品。",
 
@@ -12,106 +14,134 @@
 	"block.workshop_for_handsome_adventurer.simple_table_spruce": "製作桌 (杉木)",
 	"block.workshop_for_handsome_adventurer.simple_table_birch": "製作桌 (樺木)",
 	"block.workshop_for_handsome_adventurer.simple_table_jungle": "製作桌 (叢林木)",
-	"block.workshop_for_handsome_adventurer.simple_table_dark_oak": "製作桌 (深色橡木)",
+	"block.workshop_for_handsome_adventurer.simple_table_dark_oak": "製作桌 (黑橡木)",
+	"block.workshop_for_handsome_adventurer.simple_table_mangrove": "製作桌 (紅樹木)",
+	"block.workshop_for_handsome_adventurer.simple_table_crimson": "製作桌 (緋紅蕈木)",
+	"block.workshop_for_handsome_adventurer.simple_table_warped": "製作桌 (扭曲蕈木)",
 	"block.workshop_for_handsome_adventurer.simple_table.tooltip1": "一張小巧的製作桌，使用起來不太方便，也有些尷尬。",
 	"block.workshop_for_handsome_adventurer.simple_table.tooltip2": "可存取附近的儲物裝置，可放置物品。",
 
 	"block.workshop_for_handsome_adventurer.tool_rack_double_oak": "工具架 (橡木，三排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_double_spruce": "工具架 (杉木，三排)",
-	"block.workshop_for_handsome_adventurer.tool_rack_double_dark_oak": "工具架 (深色橡木，三排)",
+	"block.workshop_for_handsome_adventurer.tool_rack_double_dark_oak": "工具架 (黑橡木，三排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_double_acacia": "工具架 (相思木，三排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_double_jungle": "工具架 (叢林木，三排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_double_birch": "工具架 (樺木，三排)",
+	"block.workshop_for_handsome_adventurer.tool_rack_double_mangrove": "工具架 (紅樹木，三排)",
+	"block.workshop_for_handsome_adventurer.tool_rack_double_crimson": "工具架 (緋紅蕈木，三排)",
+	"block.workshop_for_handsome_adventurer.tool_rack_double_warped": "工具架 (扭曲蕈木，三排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_double.tooltip1": "可放置6個物品。",
 	"block.workshop_for_handsome_adventurer.tool_rack_double.tooltip2": "使用方便，美觀大方。",
 
 	"block.workshop_for_handsome_adventurer.tool_rack_framed_oak": "工具架 (橡木，帶框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_framed_spruce": "工具架 (杉木，帶框)",
-	"block.workshop_for_handsome_adventurer.tool_rack_framed_dark_oak": "工具架 (深色橡木，帶框)",
+	"block.workshop_for_handsome_adventurer.tool_rack_framed_dark_oak": "工具架 (黑橡木，帶框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_framed_acacia": "工具架 (相思木，帶框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_framed_jungle": "工具架 (叢林木，帶框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_framed_birch": "工具架 (樺木，帶框)",
+	"block.workshop_for_handsome_adventurer.tool_rack_framed_mangrove": "工具架 (紅樹木，帶框)",
+	"block.workshop_for_handsome_adventurer.tool_rack_framed_crimson": "工具架 (緋紅蕈木，帶框)",
+	"block.workshop_for_handsome_adventurer.tool_rack_framed_warped": "工具架 (扭曲蕈木，帶框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_framed.tooltip1": "可放置6個物品。",
 	"block.workshop_for_handsome_adventurer.tool_rack_framed.tooltip2": "使用方便，設計優雅。",
 
 	"block.workshop_for_handsome_adventurer.tool_rack_pframed_oak": "工具架 (橡木，半框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_pframed_spruce": "工具架 (杉木，半框)",
-	"block.workshop_for_handsome_adventurer.tool_rack_pframed_dark_oak": "工具架 (深色橡木，半框)",
+	"block.workshop_for_handsome_adventurer.tool_rack_pframed_dark_oak": "工具架 (黑橡木，半框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_pframed_acacia": "工具架 (相思木，半框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_pframed_jungle": "工具架 (叢林木，半框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_pframed_birch": "工具架 (樺木，半框)",
+	"block.workshop_for_handsome_adventurer.tool_rack_pframed_mangrove": "工具架 (紅樹木，半框)",
+	"block.workshop_for_handsome_adventurer.tool_rack_pframed_crimson": "工具架 (緋紅蕈木，半框)",
+	"block.workshop_for_handsome_adventurer.tool_rack_pframed_warped": "工具架 (扭曲蕈木，半框)",
 	"block.workshop_for_handsome_adventurer.tool_rack_pframed.tooltip1": "可放置6個物品。",
 	"block.workshop_for_handsome_adventurer.tool_rack_pframed.tooltip2": "使用方便，設計有爭議。",
 
 	"block.workshop_for_handsome_adventurer.tool_rack_single_oak": "工具架 (橡木，單排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_single_spruce": "工具架 (杉木，單排)",
-	"block.workshop_for_handsome_adventurer.tool_rack_single_dark_oak": "工具架 (深色橡木，單排)",
+	"block.workshop_for_handsome_adventurer.tool_rack_single_dark_oak": "工具架 (黑橡木，單排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_single_acacia": "工具架 (相思木，單排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_single_jungle": "工具架 (叢林木，單排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_single_birch": "工具架 (樺木，單排)",
+	"block.workshop_for_handsome_adventurer.tool_rack_single_mangrove": "工具架 (紅樹木，單排)",
+	"block.workshop_for_handsome_adventurer.tool_rack_single_crimson": "工具架 (緋紅蕈木，單排)",
+	"block.workshop_for_handsome_adventurer.tool_rack_single_warped": "工具架 (扭曲蕈木，單排)",
 	"block.workshop_for_handsome_adventurer.tool_rack_single.tooltip1": "可放置2個物品。",
 	"block.workshop_for_handsome_adventurer.tool_rack_single.tooltip2": "易於安裝，設計簡約。",
 
 	"block.workshop_for_handsome_adventurer.potion_shelf_oak": "藥水架 (橡木)",
 	"block.workshop_for_handsome_adventurer.potion_shelf_spruce": "藥水架 (杉木)",
-	"block.workshop_for_handsome_adventurer.potion_shelf_dark_oak": "藥水架 (深色橡木)",
+	"block.workshop_for_handsome_adventurer.potion_shelf_dark_oak": "藥水架 (黑橡木)",
 	"block.workshop_for_handsome_adventurer.potion_shelf_acacia": "藥水架 (相思木)",
 	"block.workshop_for_handsome_adventurer.potion_shelf_jungle": "藥水架 (叢林木)",
 	"block.workshop_for_handsome_adventurer.potion_shelf_birch": "藥水架 (樺木)",
+	"block.workshop_for_handsome_adventurer.potion_shelf_mangrove": "藥水架 (紅樹木)",
+	"block.workshop_for_handsome_adventurer.potion_shelf_crimson": "藥水架 (緋紅蕈木)",
+	"block.workshop_for_handsome_adventurer.potion_shelf_warped": "藥水架 (扭曲蕈木)",
 	"block.workshop_for_handsome_adventurer.potion_shelf.tooltip1": "可放置6組藥水。",
 	"block.workshop_for_handsome_adventurer.potion_shelf.tooltip2": "每組可堆疊幾瓶。",
 
 	"block.workshop_for_handsome_adventurer.book_shelf_double_oak": "書架 (橡木，兩排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_double_spruce": "書架 (杉木，兩排)",
-	"block.workshop_for_handsome_adventurer.book_shelf_double_dark_oak": "書架 (深色橡木，兩排)",
+	"block.workshop_for_handsome_adventurer.book_shelf_double_dark_oak": "書架 (黑橡木，兩排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_double_acacia": "書架 (相思木，兩排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_double_jungle": "書架 (叢林木，兩排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_double_birch": "書架 (樺木，兩排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_double_mangrove": "書架 (紅樹木，兩排)",
+	"block.workshop_for_handsome_adventurer.book_shelf_double_crimson": "書架 (緋紅蕈木，兩排)",
+	"block.workshop_for_handsome_adventurer.book_shelf_double_warped": "書架 (扭曲蕈木，兩排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_double_cherry": "書架 (櫻桃木，兩排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_double.tooltip1": "可放置8本書。",
 	"block.workshop_for_handsome_adventurer.book_shelf_double.tooltip2": "有足夠空間放所有的手冊和食譜書。",
 
 	"block.workshop_for_handsome_adventurer.book_shelf_minimal_oak": "書架 (橡木，單排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_minimal_spruce": "書架 (杉木，單排)",
-	"block.workshop_for_handsome_adventurer.book_shelf_minimal_dark_oak": "書架 (深色橡木，單排)",
+	"block.workshop_for_handsome_adventurer.book_shelf_minimal_dark_oak": "書架 (黑橡木，單排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_minimal_acacia": "書架 (相思木，單排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_minimal_jungle": "書架 (叢林木，單排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_minimal_birch": "書架 (樺木，單排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_minimal_mangrove": "書架 (紅樹木，單排)",
+	"block.workshop_for_handsome_adventurer.book_shelf_minimal_crimson": "書架 (緋紅蕈木，單排)",
+	"block.workshop_for_handsome_adventurer.book_shelf_minimal_warped": "書架 (扭曲蕈木，單排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_minimal_cherry": "書架 (櫻桃木，單排)",
 	"block.workshop_for_handsome_adventurer.book_shelf_minimal.tooltip1": "可放置4本書。",
-	"block.workshop_for_handsome_adventurer.book_shelf_minimal.tooltip2": "適合小空間使用。"
+	"block.workshop_for_handsome_adventurer.book_shelf_minimal.tooltip2": "適合小空間使用。",
 
 	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_oak": "書架 (橡木，單排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_spruce": "書架 (杉木，單排，開放)",
-	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_dark_oak": "書架 (深色橡木，單排，開放)",
+	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_dark_oak": "書架 (黑橡木，單排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_acacia": "書架 (相思木，單排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_jungle": "書架 (叢林木，單排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_birch": "書架 (樺木，單排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_mangrove": "書架 (紅樹木，單排，開放)",
+	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_crimson": "書架 (緋紅蕈木，單排，開放)",
+	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_warped": "書架 (扭曲蕈木，單排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal_cherry": "書架 (櫻桃木，單排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal.tooltip1": "可放置4本書。",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_minimal.tooltip2": "適合小空間的精緻設計。",
 
 	"block.workshop_for_handsome_adventurer.book_shelf_open_double_oak": "書架 (橡木，雙排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_double_spruce": "書架 (杉木，雙排，開放)",
-	"block.workshop_for_handsome_adventurer.book_shelf_open_double_dark_oak": "書架 (深色橡木，雙排，開放)",
+	"block.workshop_for_handsome_adventurer.book_shelf_open_double_dark_oak": "書架 (黑橡木，雙排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_double_acacia": "書架 (相思木，雙排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_double_jungle": "書架 (叢林木，雙排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_double_birch": "書架 (樺木，雙排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_double_mangrove": "書架 (紅樹木，雙排，開放)",
+	"block.workshop_for_handsome_adventurer.book_shelf_open_double_crimson": "書架 (緋紅蕈木，雙排，開放)",
+	"block.workshop_for_handsome_adventurer.book_shelf_open_double_warped": "書架 (扭曲蕈木，雙排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_double_cherry": "書架 (櫻桃木，雙排，開放)",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_double.tooltip1": "可放置8本書。",
 	"block.workshop_for_handsome_adventurer.book_shelf_open_double.tooltip2": "簡單的設計，適合樸素的人。",
 
 	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_oak": "書架 (橡木，帶燈)",
 	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_spruce": "書架 (杉木，帶燈)",
-	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_dark_oak": "書架 (深色橡木，帶燈)",
+	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_dark_oak": "書架 (黑橡木，帶燈)",
 	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_acacia": "書架 (相思木，帶燈)",
 	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_jungle": "書架 (叢林木，帶燈)",
 	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_birch": "書架 (樺木，帶燈)",
 	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_mangrove": "書架 (紅樹木，帶燈)",
+	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_crimson": "書架 (緋紅蕈木，帶燈)",
+	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_warped": "書架 (扭曲蕈木，帶燈)",
 	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns_cherry": "書架 (櫻桃木，帶燈)",
 	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns.tooltip1": "可放置4本書。",
 	"block.workshop_for_handsome_adventurer.book_shelf_with_lanterns.tooltip2": "適合廚房使用，適合放食譜書。",
